--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,8 +40,8 @@
             
             					<p class="pl-3">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
-            					<form action="" method="post">
-            						<input class="ml-3 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
+            					<form action="" method="post" class="d-flex">
+            						<input class="col-5 form-control ml-3 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
             
             						<button class="btn" type="submit">S'inscrire</button>
             					</form>
@@ -73,7 +73,7 @@
     
     
     					<div class="row accordion" id="accordionExample">
-    						<div class="modif-accordeon col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4">
     							<div class="card-header" id="headingOne">
     								<h2 class="d-flex mb-0">
     									<p class=" btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -95,7 +95,7 @@
     								</div>
     							</div>
     						</div>
-    						<div class="modif-accordeon col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4">
     							<div class="card-header" id="headingTwo">
     								<h2 class="d-flex mb-0">
     									<p class=" btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -114,7 +114,7 @@
     								</div>
     							</div>
     						</div>
-    						<div class="modif-accordeon col-xl-4 card">
+    						<div class="modif-accordeon col-xl-4">
     							<div class="card-header" id="headingThree">
     								<h2 class="d-flex mb-0">
     									<p class="btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
