--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -23,7 +23,7 @@
 		<h2>Nos prochains événements</h2>
 		<div class="card-columns">
 			{% for evenement in evenements %}
-			<div class="card" style="width: 18rem;">
+			<div class="card">
 				<div class="card-body">
 				  <h5 class="card-title">{{ evenement.titre }}</h5>
 				</div>
