--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('panier_index') }}">Retour</a>
+    <a href="{{ path('panier_index') }}" class="btn"><i class="fas fa-arrow-left"></i></a>Retour</a>
 
-    <a href="{{ path('panier_edit', {'id': panier.id}) }}"> Modifier</a>
+    <a href="{{ path('panier_edit', {'id': panier.id}) }}" class="btn"><i class="fas fa-edit"></i>Modifier</a>
 
     {{ include('panier/_delete_form.html.twig') }}
 {% endblock %}
