--- a/templates/profil/edit_profil_artiste.html.twig
+++ b/templates/profil/edit_profil_artiste.html.twig
@@ -14,7 +14,7 @@
     
     <div class="card mt-3 mb-3 bg-light">
         <div class="card-body">            
-        {{ include('profil/_form_membre.html.twig', {'button_label': 'Update'}) }}
+        {{ include('profil/_form_membre.html.twig', {'button_label': 'Mise à jour'}) }}
         </div>
     </div>
 
