Ajout balise meta + alt

--- a/templates/bo_base.html.twig
+++ b/templates/bo_base.html.twig
@@ -27,9 +27,9 @@
             </main>
 
             <footer>
-                <div class="bo-footer text-center bg-light p-3">
-					&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ.
-                </div>
+                <div class="text-center">
+					&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ - Best Team ever 🎨
+				</div>
             </footer>
 
         </div>
