--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Art d'un temps est une plateforme qui met en relation des artistes émergeants et des amateurs d'arts">
 		<title>
 			{% block title %}Art d'un temps
 			{% endblock %}
