--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,7 +84,7 @@
                 <!-- 1ER POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div>
-                        <img src="/images/decouvrez.png" class="pictos-concept">
+                        <img src="/images/decouvrez.png" class="pictos-concept" alt="Decouvrez">
                     </div>
                     <span><strong>Découvrez</strong></span>
                     <p>Visualisez toutes les oeuvres en quelques clics sans bouger de chez vous.</p>
@@ -92,7 +92,7 @@
                 <!-- 2E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div>
-                        <img src="/images/gerez.png" class="pictos-concept">
+                        <img src="/images/gerez.png" class="pictos-concept" alt="Gerez">
                     </div>
                     <span><strong>Gérez</strong></span>
                     <p>Grâce à votre espace personnel, gérez vos contenus et rencontrez d'autres artistes.</p>
@@ -100,7 +100,7 @@
                 <!-- 3E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div>
-                        <img src="/images/achetez.png" class="pictos-concept">
+                        <img src="/images/achetez.png" class="pictos-concept" alt="Achetez">
                     </div>
                     <span><strong>Achetez</strong></span>
                     <p>Acquérisez les oeuvres d'art en quelques clics sans bouger de votre canapé.</p>
@@ -108,7 +108,7 @@
                 <!-- 4E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div>
-                        <img src="/images/venez.jpg" class="pictos-concept">
+                        <img src="/images/venez.jpg" class="pictos-concept" alt="Venez">
                     </div>
                     <span><strong>Venez</strong></span>
                     <p>Ne ratez aucun événement artistique pour partager des moments avec les artistes.</p>
@@ -119,7 +119,7 @@
     <section id="focus" class="container-fluid">
         <div class="container">
             <!-- BLOC TITRE -->
-            <img src="/images/quote.png" class="quote-focus mt-4"> 
+            <img src="/images/quote.png" class="quote-focus mt-4" alt="Quote"> 
             <h2>L'aérographie</h2>
             <!-- BLOC DETAILS-->
             <div class="col-12 col-lg-4 pb-3">
