--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,26 +17,18 @@
                     <h2>Vos identifiants</h2>
                     {{ form_row(registrationForm.roles) }}
                     {{ form_row(registrationForm.pseudo) }}
-                    {#{{ form_errors(registrationForm.pseudo)}}#}
                     {{ form_row(registrationForm.plainPassword, {
                         label: "Mot de passe"
                         }) 
                     }}
-                    {#{{ form_row(registrationForm.photo, {
-                        label: "Photo"
-                        })   }}#}
+
                 </div>
                 <div class="border rounded p-4 m-3 bg-white">
                     <h2>Vos informations</h2>
-                    <p>Pour nous permettre de vous proposer des actualités et des artistes proches de chez vous, veuillez renseigner votre adresse.</p>
+                    <p>Quelques informations pour mieux vous connaître.</p>
                     {{ form_row(registrationForm.nom) }}
                     {{ form_row(registrationForm.prenom) }}
                     {{ form_row(registrationForm.email) }}
-                    {#{{ form_row(registrationForm.adresse) }}
-                    {{ form_row(registrationForm.cp, {
-                        label: "Code postal"
-                        })  }}
-                    {{ form_row(registrationForm.ville) }}#}
                     {{ form_row(registrationForm.agreeTerms, {
                         label: "J'accepte les Conditions Générales d'Utilisation"
                         })   }}
