--- a/templates/oeuvre/oeuvre.html.twig
+++ b/templates/oeuvre/oeuvre.html.twig
@@ -12,7 +12,7 @@
 			<div class="col-lg-4">
 				<h1 class="titre-black">{{ oeuvre.nomOeuvre }}</h1>
 				<hr>
-				<p class="infos-oeuvre">{{ oeuvre.categorie }}: {{ oeuvre.annee ? oeuvre.annee|date('d m Y') : '' }}</p>
+				<p class="infos-oeuvre">{{ oeuvre.categorie }}: {{ oeuvre.annee ? oeuvre.annee|date('d-m-Y') : '' }}</p>
 				<div>
 					<a href="#description">Voir la description detaillé</a>
 					<p class="prix">{{ oeuvre.prix }} €</p>
