--- a/templates/oeuvre/show.html.twig
+++ b/templates/oeuvre/show.html.twig
@@ -38,7 +38,7 @@
                     </tr> #}
                     <tr>
                         <th>Année</th>
-                        <td>{{ oeuvre.annee ? oeuvre.annee|date('Y') : '' }}</td>
+                        <td>{{ oeuvre.annee ? oeuvre.annee|date('d-m-Y') : '' }}</td>
                     </tr>
                     <tr>
                         <th>Dimension</th>
