Corrections d'affichage du BO

--- a/templates/bo_base.html.twig
+++ b/templates/bo_base.html.twig
@@ -27,7 +27,7 @@
             </main>
 
             <footer>
-                <div class="text-center">
+                <div class="text-center p-4 bg-light bo-footer">
 					&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ - Best Team ever 🎨
 				</div>
             </footer>
