--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -25,17 +25,6 @@
         <tbody>
         {% for evenement in evenements %}
 
-            <tr>
-                <td>{{ evenement.id }}</td>
-                <td>{{ evenement.ville }}</td>
-                <td>{{ evenement.cp }}</td>
-                <td>{{ evenement.adresse }}</td>
-                <td>{{ evenement.date ? evenement.date|date('d-m-Y') : '' }}</td>
-                <td>{{ evenement.titre }}</td>
-                <td>
-                    <a href="{{ path('evenement_show', {'id': evenement.id}) }}"> Voir </a>
-                    <a href="{{ path('evenement_edit', {'id': evenement.id}) }}"> Modifier </a>
-/*
             <tr class="text-table">
                 <td class="align-middle">{{ evenement.titre }}</td>
                 <td class="align-middle">
@@ -46,7 +35,7 @@
                 <td class="align-middle">
                     <a href="{{ path('evenement_show', {'id': evenement.id}) }}" class="link-action"><i class="fas fa-eye"></i></a>
                     <a href="{{ path('evenement_edit', {'id': evenement.id}) }}" class="link-action"><i class="fas fa-edit"></i></a>
-*/
+
                 </td>
             </tr>
         {% else %}
@@ -57,6 +46,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('evenement_new') }}"> Créer un nouvel événement</a>
+    <a href="{{ path('evenement_new') }}" class="btn"> Créer un nouvel événement</a>
 
 {% endblock %}
