--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -28,9 +28,10 @@
 				  <h5 class="card-title">{{ evenement.titre }}</h5>
 				</div>
 				<ul class="list-group list-group-flush">
-				  <li class="list-group-item">{{ evenement.adresse }}</li>
-				  <li class="list-group-item">{{ evenement.cp }} - {{ evenement.ville }}</li>
-				  <li class="list-group-item">{{ evenement.date ? evenement.date|date('Y-m-d') : '' }}</li>
+				  <li class="list-group-item">
+					  <i class="fas fa-map-marker-alt"></i> {{ evenement.adresse }}
+					  {{ evenement.cp }} - {{ evenement.ville }}</li>
+				  <li class="list-group-item"><i class="far fa-calendar-alt"></i> {{ evenement.date ? evenement.date|date('d-m-Y') : '' }}</li>
 				</ul>
 			  </div>
 			  {% endfor %}
