--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -156,11 +156,11 @@
                 {% for membre in membres %}
                 <div class="col-md-3 col-sm-6 d-xl-flex">
                     <div>
-                        <img class="rounded-circle img-membre-list" src="{{ asset(dossier_images_membres) ~ membre.photo }}" alt="-">
+                        <img class="rounded img-membre-list" src="{{ asset(dossier_images_membres) ~ membre.photo }}" alt="-">
                     </div>
-                    <div class="align-self-lg-center">
-                        <p class="description">{{ membre.pseudo }}</p>
-                        <p class="peintre-lyon">Artiste à {{ membre.ville }}</p>
+                    <div class="align-self-lg-center p-3">
+                        <p class="description">{{ membre.pseudo }} <br>
+                        <span class="peintre-lyon">Artiste à {{ membre.ville }}</span></p>
                     </div>
                 </div>
                 {% endfor %}
