--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -47,7 +47,12 @@
                                 </a>
                             </li>
                         {% endif %}
-
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path("panier")}}">
+								Panier
+								<i class="fas fa-shopping-cart"></i>
+							</a>
+						</li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path("app_logout") }}">
                                 <i class="fa fa-sign-out-alt"></i>
