--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -11,6 +11,7 @@
                 <table class="table mt-3">
                     <thead class="bg-light">
                         <tr>
+                            <th>Photo</th>
                             <th>Oeuvre</th>
                             <th>Prix</th>
                             <th>Quantité</th>
@@ -19,7 +20,36 @@
                         </tr>
                     </thead>
                     <tbody>
+                    {% for element in data %}
+                            <tr class="text-table">
+                                <td><img class="rounded img-membre-list" src="{{ asset(dossier_images_oeuvres) ~ element.product.photo }}" alt="-"></td>
+                                <td>{{ element.product.titre }}<br>
+                                de {{ element.product.user.pseudo }}</td>
+                                <td>{{ element.product.prix }} €</td>
+                                <td><a href="#" class="link-action"><i class="fas fa-minus"></i></a>
+                                {{ element.quantity }}
+                                <a href="#" class="link-action"><i class="fas fa-plus"></i></a>
+                                </td>
+                                <td>{{ element.quantity * element.product.prix }} €</td>
+                                <td>
+                                    <a href="#" class="link-action"><i class="fas fa-trash"></i></a>
+                                </td>
+                            </tr>
+                            {% else %}
+                            <tr class="text-table">
+                                <td colspan="5">Votre panier est vide </td>
+                            </tr>
+                    {% endfor %}
                     </tbody>
+                    <tfoot>
+                        <tr class="text-table">
+                            <td colspan="4">Total</td>
+                            <td>{{ total }} €</td>
+                            <td>
+                                <a href="#" class="btn"><i class="fas fa-trash"></i> Vider le panier</a>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
 
