--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -25,7 +25,14 @@
                 <div class="border rounded p-4 m-3 bg-white">
                     <h2>Vos informations</h2>
                     <p>Quelques informations pour mieux vous connaître.</p>
-
+                    {{ form_row(registrationForm.nom) }}
+                    {{ form_row(registrationForm.prenom) }}
+                    {{ form_row(registrationForm.pseudo) }}
+                    {{ form_row(registrationForm.photo) }}
+                    {{ form_row(registrationForm.adresse) }}
+                    {{ form_row(registrationForm.cp) }}
+                    {{ form_row(registrationForm.ville) }}
+                    
 
                     
                     {{ form_row(registrationForm.agreeTerms, {
