Formulaire d'inscription type et view

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -43,7 +43,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">
                                     <i class="fa fa-user"></i>
-                                    Mon profil
+                                    Mon compte
                                 </a>
                             </li>
                         {% endif %}
