--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,36 +8,29 @@
     
     <div class="bg-dark">
         <div class="col-lg-6 mx-auto pt-3">
-            <h1>inscription</h1>
+            <h1>Inscription</h1>
 
             {{ form_start(registrationForm) }}
 
                 <div class="border rounded p-4 m-3 bg-white">
-                    <h2>Vos identifiants</h2>
-                   
-                    {{ form_row(registrationForm.email) }}
-                    {{ form_row(registrationForm.plainPassword, {
-                        label: "Mot de passe"
-                        }) 
-                    }}
-
-                </div>
-                <div class="border rounded p-4 m-3 bg-white">
-                    <h2>Vos informations</h2>
-                    <p>Quelques informations pour mieux vous connaître.</p>
-                    {{ form_row(registrationForm.nom) }}
-                    {{ form_row(registrationForm.prenom) }}
-                    {{ form_row(registrationForm.pseudo) }}
-                    {{ form_row(registrationForm.photo) }}
-                    {{ form_row(registrationForm.adresse) }}
-                    {{ form_row(registrationForm.cp) }}
-                    {{ form_row(registrationForm.ville) }}
-                    
-
-                    
-                    {{ form_row(registrationForm.agreeTerms, {
-                        label: "J'accepte les Conditions Générales d'Utilisation"
-                        })   }}
+                    <fieldset>
+                        <legend><h2>Votre identité</h2></legend>
+                        {{ form_row(registrationForm.nom) }}
+                        {{ form_row(registrationForm.prenom) }}
+                        {{ form_row(registrationForm.email) }}
+                        {{ form_row(registrationForm.plainPassword) }}
+                        {{ form_row(registrationForm.pseudo) }}
+                        {{ form_row(registrationForm.photo) }}
+                    </fieldset>
+                        
+                    <fieldset>
+                        <legend><h2>Vos coordonnées</h2></legend>
+                        {{ form_row(registrationForm.adresse) }}
+                        {{ form_row(registrationForm.cp) }}
+                        {{ form_row(registrationForm.ville) }}
+                    </fieldset>
+               
+                    {{ form_row(registrationForm.agreeTerms) }}
                 </div>
                 <div class="p-4 right">
                     {{ form_row(registrationForm.enregistrer) }}
