--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,15 @@
 		<div class="container-fluid p-0">
 			{{ include("menu.html.twig") }}
 
+			{% if app.user and app.user.isVerified == false %}
+				<div class="alert alert-warning alert-dismissible fade show" role="alert">
+					<strong>Votre compte n'est pas activé,</strong> <a href="{{ path('resend_verif')}}">renvoyer le lien d'activation</a>.
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+				</div>
+			{% endif %}
+
+			{#{{ include("_flash.html.twig") }}#}
+
 			<h1>
 				{% block titreH1 %}{% endblock %}
 			</h1>
