--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,6 +7,7 @@ $breadcrumb-divider: quote(">");
 //********************
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~bootstrap/scss/bootstrap";
+@import "custom";
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
