--- a/templates/_flash.html.twig
+++ b/templates/_flash.html.twig
@@ -2,7 +2,7 @@
     {% for message in messages %}
         <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
 			{{ message|raw }}
-			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		</div>
     {% endfor %}
 {% endfor %}
