--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 				{% if app.user and app.user.isVerified == false %}
 					<div class="alert alert-warning alert-dismissible fade show" role="alert">
 						<strong>Votre compte n'est pas activé,</strong> <a href="{{ path('resend_verif')}}">renvoyer le lien d'activation</a>.
-						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					</div>
 				{% endif %}
 
