Revue de la page Mon compte User

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -318,6 +318,11 @@ footer hr {
     height: 60px;
 }
 
+.infos-perso-min{
+    font-style: italic;
+    color: #999; 
+}
+
 .ul-profil {
     color: white;
 }
