--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,6 +37,7 @@
             <div class="p-4 d-flex justify-content-between">
                 <button class="btn" type="submit">Se connecter</button>
                 <a class="nav-link fz-nav" href="{{ path("app_register") }}">S'inscrire</a>
+                <a class="nav-link fz-nav" href="{{ path("forgotten_password") }}">Mot de passe oublié</a>
             </div>
         </div>
     </div>
