--- a/templates/users/profil_user.html.twig
+++ b/templates/users/profil_user.html.twig
@@ -62,32 +62,30 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">Commandes d'oeuvres</h5>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead class="bg-light">
+                                <th>N° Commande</th>
+                                <th>Date</th>
+                                <th>Etat</th>
+                                <th>Total</th>
+                                <th>Actions</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
 
     </section>
-		
-
-		<h2 class="border-bottom h2-profil">Mes commandes</h2>
-
-		<div class="row justify-content-between align-items-start pb-3">
-			
-			<div class="col-lg-2">
-			<img class="rounded img-membre" src="/images/oeuvre_mea_01.jpg" alt="photo de l'oeuvre">
-			</div>
-
-			<ul class="col-lg-8 ul-profil">
-				<li>Numéro de commande :</li>
-				<li>Titre de l'oeuvre :</li>
-				<li>Prix :</li>			
-				<li>Statut de la commande :</li>
-			</ul>
-			
-			<div class="col-lg-2">
-				<a href="#">Voir le détail</a>
-			</div>
-		
-		</div>
 		
 {% endblock %}
