--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -38,7 +38,7 @@
                                 <td colspan="3" class="align-middle">Total</td>
                                 <td class="align-middle">{{ total }} €</td>
                                 <td class="align-middle">
-                                    <a href="{{ path('cart_empty') }}" class="btn"><i class="fas fa-trash"></i> Vider le panier</a>
+                                    <a href="{{ path('cart_empty') }}" class="nav-link"><i class="fas fa-trash"></i> Vider le panier</a>
                                 </td>
                             </tr>
                             {% else %}
@@ -48,8 +48,13 @@
                         {% endfor %}
                     </tbody>
                 </table>
-            </div>
 
+                
+            </div>
+            <div class="py-3 border-top d-flex justify-content-end">
+                <a href="{{ path('app_orders_add')}}" class="btn">Valider mon panier</a>
+            </div>
+            
         </div>
     </main>
 {% endblock %}
